fixed heights for viewport on mobile

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ main {
 /*search front page*/
 .hero {
 	height: 65vh;
-	height: calc(var(--vh, 1vh) * 100);
+	height: calc(var(--vh, 1vh) * 65);
 	width: 100%;
 	text-align: center;
 	display: flex;
@@ -77,12 +77,13 @@ main {
 
 .rec-categories {
 	margin-top: 65vh;
-	height: calc(var(--vh, 1vh) * 100);
+	margin-top: calc(var(--vh, 1vh) * 65);
+	height: 35vh;
+	height: calc(var(--vh, 1vh) * 35);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 35vh;
 	text-align: center;
 	background-color: #FDF6D9;
 	position: fixed;
